--- a/www/index.html
+++ b/www/index.html
@@ -31,7 +31,7 @@
                 })
         }
 
-        function fetchAll() {
+         function fetchAll() {
             UTdata.fetchAll()
                 .then(function(results) {
                     let msg = "";
@@ -51,10 +51,11 @@
         }
 
         function sortData() {
-            UTdata.order(key,true).fetchAll().then(function(results){
-                let msg=" ";
-                for(let i=0; i<results.length;i++){
-                    msg+=results[i].get(key)+"<br>";
+            UTdata.order(key, true).fetchAll()
+            .then(function(results){
+                let msg = "";
+                for(let i = 0; i < results.length; i++){
+                    msg += results[i].get(key) + "<br>";
                 }
                 $("#display").removeClass();
                 $("#display").addClass("text-light");
@@ -64,7 +65,7 @@
             .catch(function(error){
                 $("#display").removeClass();
                 $("#display").addClass("bg-warning");
-                $("#display").html("delete fail:"+JSON.stringfy(error));
+                $("#display").html("delete fail:" + JSON.stringify(error));
             })
         }
 
@@ -73,7 +74,8 @@
         }
 
         function deleteData() {
-            UTdata.fetch().then(function(results){
+            UTdata.fetch()
+            .then(function(results){
                 return results.delete();
             })
             .then(function(results){
@@ -84,12 +86,27 @@
             .catch(function(error){
                 $("#display").removeClass();
                 $("#display").addClass("bg-warning");
-                $("#display").html("delete fail:"+JSON.stringify(error))
+                $("#display").html("delete fail:" + JSON.stringify(error));
             })
         }
 
         function updateData() {
-            $("#display").html("update does not work");
+            UTdata.fetch()
+            .then(function(results){
+                let value = parseInt($("#update").val());
+                results.set(key, value);
+                return results.update();
+            })
+            .then(function(results){
+                $("#display").removeClass();
+                $("#display").addClass("bg-success");
+                $("#display").html("update success");
+            })
+            .catch(function(error){
+                $("#display").removeClass();
+                $("#display").addClass("bg-warning");
+                $("#display").html("update fail:" + JSON.stringify(error));
+            })
         }
     </script>
 </head>
