--- a/www/index.html
+++ b/www/index.html
@@ -68,6 +68,24 @@
                 $("#display").html("delete fail:" + JSON.stringify(error));
             })
         }
+        function orderData() {
+            UTdata.order(key, true).fetchAll()
+            .then(function(results){
+                let msg = "";
+                for(let i = 0; i < results.length; i++){
+                    msg += results[i].get(key) + "<br>";
+                }
+                $("#display").removeClass();
+                $("#display").addClass("text-light");
+                $("#display").addClass("bg-primary");
+                $("#display").html(msg);
+            })
+            .catch(function(error){
+                $("#display").removeClass();
+                $("#display").addClass("bg-warning");
+                $("#display").html("delete fail:" + JSON.stringify(error));
+            })
+        }
 
         function countData() {
             UTdata.count().fetchAll()
@@ -132,6 +150,7 @@
         <a onclick="sortData()" class="btn btn-outline-primary" role="button">Sort</a>
         <a onclick="countData()" class="btn btn-outline-primary" role="button">Count</a>
         <a onclick="deleteData()" class="btn btn-outline-primary" role="buton">Delete</a>
+        <a onclick="orderData()" class="btn btn-outline-primary" role="button">Order</a>
     </div>
     <div>
         <input type="text" id="update" placeholder="更新">
