--- a/www/index.html
+++ b/www/index.html
@@ -69,10 +69,11 @@
             })
         }
         function orderData() {
-            UTdata.order(key, true).fetchAll()
+            UTdata.order(key, false).fetchAll()
             .then(function(results){
                 let msg = "";
-                for(let i = 0; i < results.length; i++){
+                for(let i = 0; i 
+                < results.length; i++){
                     msg += results[i].get(key) + "<br>";
                 }
                 $("#display").removeClass();
